--- a/Index.html
+++ b/Index.html
@@ -52,12 +52,28 @@
     <label id="ulog">ULOG</label>
     <label id="bet"></label>
     <label id="autohold">AUTOHOLD</label>
+    <label id="kartaxx"></label>
 
     <img id="$polje1" src="/Karte/53.png" alt="">
     <img id="$polje2" src="/Karte/53.png" alt="">
     <img id="$polje3" src="/Karte/53.png" alt="">
     <img id="$polje4" src="/Karte/53.png" alt="">
     <img id="$polje5" src="/Karte/53.png" alt="">
+
+    <img id="$polje00" src="/Karte/53.png" alt="">
+    <img id="$polje01" src="/Karte/53.png" alt="">
+    <img id="$polje02" src="/Karte/53.png" alt="">
+    <img id="$polje03" src="/Karte/53.png" alt="">
+    <img id="$polje04" src="/Karte/53.png" alt="">
+    <img id="$polje05" src="/Karte/53.png" alt="">
+    <img id="$polje06" src="/Karte/53.png" alt="">
+    <img id="$polje07" src="/Karte/53.png" alt="">
+    <img id="$polje08" src="/Karte/53.png" alt="">
+    <img id="$polje09" src="/Karte/53.png" alt="">
+    <img id="$polje10" src="/Karte/53.png" alt="">
+    <img id="$polje11" src="/Karte/53.png" alt="">
+    <img id="$polje12" src="/Karte/53.png" alt="">
+    
 
     <img id="karta01" src="/Karte/01.png" hidden="true" alt="">
     <img id="karta02" src="/Karte/02.png" hidden="true" alt="">
@@ -128,6 +144,9 @@
     <label id="stop4">STOP</label>
     <label id="stop5">STOP</label>
 
+    <label id="veca">8, 9, 10, J, Q, K = VEĆA</label>
+    <label id="manja">A, 2, 3, 4, 5, 6 = MANJA</label>
+
     <div id="izborlevo">
         <div id="dupliranje">DUPLIRANJE</div>
     </div>
@@ -137,6 +156,9 @@
     <div id="pobeda">
         <div id="pobedio">POBEDIO !</div>
     </div>
+    
+    <label id="izbormanja">MANJA</label>
+    <label id="izborveca">VEĆA</label>
 
     <audio id="audioIntro" controls style="display:none">
         <source src="/Audio/Intro.wav" allow="autoplay"> </audio>
@@ -172,6 +194,12 @@
         <source src="/Audio/Count1.wav"></audio>
     <audio id="audioCount2" controls style="display:none">
         <source src="/Audio/Count2.wav"></audio>
+    <audio id="audioVeca" controls style="display:none">
+        <source src="/Audio/Hoch.wav"></audio>
+    <audio id="audioManja" controls style="display:none">
+        <source src="/Audio/Tief.wav"></audio>
+    <audio id="audioPogodak" controls style="display:none">
+        <source src="/Audio/Pogodak.wav"></audio>
 
         <script src="Index.js"></script>
  <!-- 
