--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poker</title>
     <link rel="shortcut icon" href="#">
-    <link rel="shortcut icon" type="image/png" href="Screenshoot.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <style>
@@ -16,9 +15,8 @@
 </style>
     
 <body scroll="no" style="overflow: hidden">
- <!-- 
-    <embed src="/Resources/Intro.mp3" autostart="true" width="0" height="0">
-//-->
+ 
+    <img id="screenshoot" src="/Ostalo/Screenshoot.png" hidden alt="">
     <img id="$rucno" src="/Ostalo/Rucno.png" alt="">
 
     <div id="tabela">
